# app/app/openapi.yaml
@@ -61,23 +61,6 @@ paths:
                             schema:
                                 $ref: '#/components/schemas/Status'
     /api/admin_dhb/withdraw:
-        get:
-            tags:
-                - App
-            operationId: App_AdminWithdrawEth
-            responses:
-                "200":
-                    description: OK
-                    content:
-                        application/json:
-                            schema:
-                                $ref: '#/components/schemas/AdminWithdrawEthReply'
-                default:
-                    description: Default error response
-                    content:
-                        application/json:
-                            schema:
-                                $ref: '#/components/schemas/Status'
         post:
             tags:
                 - App
@@ -95,6 +78,24 @@ paths:
                         application/json:
                             schema:
                                 $ref: '#/components/schemas/AdminWithdrawReply'
+                default:
+                    description: Default error response
+                    content:
+                        application/json:
+                            schema:
+                                $ref: '#/components/schemas/Status'
+    /api/admin_dhb/withdraw_eth:
+        get:
+            tags:
+                - App
+            operationId: App_AdminWithdrawEth
+            responses:
+                "200":
+                    description: OK
+                    content:
+                        application/json:
+                            schema:
+                                $ref: '#/components/schemas/AdminWithdrawEthReply'
                 default:
                     description: Default error response
                     content:
